force-app/main/default/objects/Service__c/fields/LeadStaffMember1__c.field-meta.xml
<CustomField>
    <fullName>LeadStaffMember1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Staff Member 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>