force-app/main/default/objects/Service__c/fields/LeadStaffMember2__c.field-meta.xml
<CustomField>
    <fullName>LeadStaffMember2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Staff Member 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Services1</relationshipName>
    <type>Lookup</type>
</CustomField>