force-app/main/default/objects/Service__c/fields/SchoolOrganisation__c.field-meta.xml
<CustomField>
    <fullName>SchoolOrganisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The name of the school or organisation to which this service relates, if any</inlineHelpText>
    <label>School/Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services</relationshipLabel>
    <relationshipName>Services</relationshipName>
    <type>Lookup</type>
</CustomField>