force-app/main/default/objects/Service__c/fields/ServiceDescription__c.field-meta.xml
<CustomField>
    <fullName>ServiceDescription__c</fullName>
    <label>Service Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>